keel muudud eesti keeleks, pealkiri lisatud

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="et">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mari L Tei Git koduleht</title>
 </head>
 <body>
+<h1>Mari L Tei</h1>
+
 
 </body>
 </html>
