eriala ja õppeained lisatud

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <h1>Mari L Tei</h1>
 <!--pilt-->
 <img src="programming.jpg" alt="minu pilt"/>
-
+<h3>Ma õpin Noorem Tarkvaraarendaja eriala</h3>
+<strong>Õpitud ained on:</strong>
+<ul>
+    <li>Projekti loomine</li>
+    <li>Kontoritöö tarkvara</li>
+    <li>Arvuti ja -taristu osad</li>
+    <li>Multimeedia</li>
+</ul>
 
 </body>
 </html>
