õpitud/õpitavad keeled ja arvuti oskused lisatud

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!--pilt-->
 <img src="programming.jpg" alt="minu pilt"/>
 <h3>Ma õpin Noorem Tarkvaraarendaja eriala</h3>
+<!--õppeained-->
 <strong>Õpitud ained on:</strong>
 <ul>
     <li>Projekti loomine</li>
@@ -16,6 +17,29 @@
     <li>Arvuti ja -taristu osad</li>
     <li>Multimeedia</li>
 </ul>
+<!--keeled-->
+<strong>Õpitud/õpitavad keeled on:</strong>
+<ul>
+    <li>Eesti keel</li>
+    <li>Inglise keel</li>
+    <li>Vene keel</li>
 
+    <li>Java</li>
+    <li>MySQL</li>
+    <li>Python</li>
+<!--arvuti oskused-->
+<strong>Arvuti oskused:</strong>
+ <ul>
+     <li>MS Word, Excel, PowerPoint, Project</li>
+     <li>Adobe Illustrator, Photoshop</li>
+     <li>SQL Server Management Studio</li>
+     <li>Visual Studio (Python, ASP.NET)</li>
+     <li>Oracle VirtualBox (Linux, Windows)</li>
+     <li>Web Storm</li>
+     <li>Git CMD</li>
+ </ul>
+
+
+</ul>
 </body>
 </html>
