arvuti oskused uuendatud

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
      <li>Oracle VirtualBox (Linux, Windows)</li>
      <li>Web Storm</li>
      <li>Git CMD</li>
+     <li>Arvutite kokkupanek</li>
  </ul>
 
 
