css fail loodud

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Mari L Tei Git koduleht</title>
+    <link rel="stylesheet" href="minuStyle.css">
 </head>
 <body>
-<h1>Mari L Tei</h1>
+<h1>Mari L Tei Git koduleht</h1>
 <!--pilt-->
-<img src="programming.jpg" alt="minu pilt"/>
-<h3>Ma õpin Noorem Tarkvaraarendaja eriala</h3>
+<img src="programming.jpg" alt="minu pilt" width="600" height="150"/>
+<h1>Mari L Tei</h1>
+<h2>Ma õpin Noorem Tarkvaraarendaja eriala</h2>
 <!--õppeained-->
-<strong>Õpitud ained on:</strong>
+<h3><strong>Õpitud ained on:</strong></h3>
 <ul>
     <li>Projekti loomine</li>
     <li>Kontoritöö tarkvara</li>
@@ -18,7 +20,7 @@
     <li>Multimeedia</li>
 </ul>
 <!--keeled-->
-<strong>Õpitud/õpitavad keeled on:</strong>
+<h3><strong>Õpitud/õpitavad keeled on:</strong></h3>
 <ul>
     <li>Eesti keel</li>
     <li>Inglise keel</li>
@@ -27,9 +29,10 @@
     <li>Java</li>
     <li>MySQL</li>
     <li>Python</li>
+</ul>
 <!--arvuti oskused-->
-<strong>Arvuti oskused:</strong>
- <ul>
+<h3><strong>Arvuti oskused:</strong></h3>
+<ul>
      <li>MS Word, Excel, PowerPoint, Project</li>
      <li>Adobe Illustrator, Photoshop</li>
      <li>SQL Server Management Studio</li>
@@ -38,9 +41,6 @@
      <li>Web Storm</li>
      <li>Git CMD</li>
      <li>Arvutite kokkupanek</li>
- </ul>
-
-
 </ul>
 </body>
 </html>
