header3 kujundus lisatud, header1 ja header2 värvid vahetatud

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Mari L Tei Git koduleht</h1>
 <!--pilt-->
-<img src="programming.jpg" alt="minu pilt" width="600" height="150"/>
+<img src="programming.jpg" alt="minu pilt" width="600" height="150">
 <h1>Mari L Tei</h1>
 <h2>Ma õpin Noorem Tarkvaraarendaja eriala</h2>
 <!--õppeained-->
