MVP pealkiri ja kirjeldus lisatud

--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
      <li>Git CMD</li>
      <li>Arvutite kokkupanek</li>
 </ul>
+<h2><strong>MVP</strong></h2>
+<strong>MVP (Minimum Viable Product) on toote esialgne versioon, mis sisaldab ainult põhifunktsioone, et testida ideed turul ja koguda kasutajate tagasisidet.<strong/>
+
+
 </body>
 </html>
