Kuidas saab MVP printsiipi kasutada oma IT projektides lisatud

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
      <li>Arvutite kokkupanek</li>
 </ul>
 <h2><strong>MVP</strong></h2>
-<strong>MVP (Minimum Viable Product) on toote esialgne versioon, mis sisaldab ainult põhifunktsioone, et testida ideed turul ja koguda kasutajate tagasisidet.<strong/>
-
-
+<p><strong>MVP (Minimum Viable Product) on toote esialgne versioon, mis sisaldab ainult põhifunktsioone, et testida ideed turul ja koguda kasutajate tagasisidet.</strong></p>
+<h3><strong>Kuidas saab MVP printsiipi kasutada oma IT projektides</strong></h3>
+<p><strong>MVP</strong> põhimõtet kasutades saab IT-projektides kiiresti välja arendada toote põhifunktsioonid ja esitada need kasutajatele tagasiside saamiseks. See võimaldab tuvastada ja lahendada potentsiaalseid probleeme varajases etapis, kohandades toodet vastavalt kasutajate vajadustele. Lisaks aitab see minimeerida ajakulu ja ressursse, keskendudes olulisele.</p>
 </body>
 </html>
