css issue1(p, ul>li, ul > li::before) muudetud allighment, margin, padding, widht + css image border, width + css ul border and width

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
 <h2><strong>MVP</strong></h2>
 <p><strong>MVP (Minimum Viable Product) on toote esialgne versioon, mis sisaldab ainult põhifunktsioone, et testida ideed turul ja koguda kasutajate tagasisidet.</strong></p>
 <h3><strong>Kuidas saab MVP printsiipi kasutada oma IT projektides</strong></h3>
-<p><strong>MVP</strong> põhimõtet kasutades saab IT-projektides kiiresti välja arendada toote põhifunktsioonid ja esitada need kasutajatele tagasiside saamiseks. See võimaldab tuvastada ja lahendada potentsiaalseid probleeme varajases etapis, kohandades toodet vastavalt kasutajate vajadustele. Lisaks aitab see minimeerida ajakulu ja ressursse, keskendudes olulisele.</p>
+<div id="issue1">
+    <ul>
+        <li><strong>MVP</strong> põhimõtet kasutades saab IT-projektides kiiresti välja arendada toote põhifunktsioonid ja esitada need kasutajatele tagasiside saamiseks.</li>
+        <li>See võimaldab tuvastada ja lahendada potentsiaalseid probleeme varajases etapis, kohandades toodet vastavalt kasutajate vajadustele.</li>
+        <li>Lisaks aitab see minimeerida ajakulu ja ressursse, keskendudes olulisele.</li>
+    </ul>
+</div>
+
+
 </body>
 </html>
