header3 'Loo uus repository GitHubit' lisatud

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 <div id="issue2">
 <h2><strong>Kuidas teha remote repo ja mis käskud on vaja kasutada</strong></h2>
+    <h3><strong>Loo uus repository GitHubis</strong></h3>
 
 
 
