'Loo uus repository GitHubs'sammude nimikiri lisatud

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 <h2><strong>Kuidas teha remote repo ja mis käskud on vaja kasutada</strong></h2>
     <h3><strong>Loo uus repository GitHubis</strong></h3>
 
+    <ul>
+        <li> Minge oma GitHubi kontole.</li>
+        <li> Klõpsake nuppu "New" või "Create new repository".</li>
+        <li> Andke oma repository'le nimi ja lisage soovi korral kirjeldus.</li>
+        <li> Valige, kas repository peaks olema avalik või privaatne.</li>
+        <li> Klõpsake nuppu "Create repository".</li>
+    </ul>
 
 
 </div>
