header3 'Lokaalse repository loomine ja ühendamine remote repository-ga' lisatud

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li> Valige, kas repository peaks olema avalik või privaatne.</li>
         <li> Klõpsake nuppu "Create repository".</li>
     </ul>
-
+    <h3><strong>Lokaalse repository loomine ja ühendamine remote repository-ga</strong></h3>
 
 </div>
 </body>
