--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Mari L Tei Git koduleht</h1>
 <!--pilt-->
-<img src="programming.jpg" alt="minu pilt" width="600" height="150">
+<img src="programming.jpg" alt="minu pilt" >
 <h1>Mari L Tei</h1>
 <h2>Ma õpin Noorem Tarkvaraarendaja eriala</h2>
 <!--õppeained-->
@@ -65,6 +65,17 @@
         <li> Klõpsake nuppu "Create repository".</li>
     </ul>
     <h3><strong>Lokaalse repository loomine ja ühendamine remote repository-ga</strong></h3>
+
+    <ul>
+        <li>Loo lokaalne repository (kui see pole veel olemas)</li>
+        <li><strong>git init</strong></li>
+        <li>img=src"img.png" alt="git init screen"</li>
+        <li>Lisage failid ja committige esialgsed muudatused</li>
+        <li><strong>git add .</strong></li>
+        <li><strong>git commit -m "Esialgne commit"</strong></li>
+
+
+    </ul>
 
 </div>
 </body>
