css uuendatud: lisatud #issue2 ul, #issue2 ul > li, #issue2 ul > li::before, #issue2 img, #issue2 p, .git-command

--- a/index.html
+++ b/index.html
@@ -66,16 +66,26 @@
     </ul>
     <h3><strong>Lokaalse repository loomine ja ühendamine remote repository-ga</strong></h3>
 
-    <ul>
-        <li>Loo lokaalne repository (kui see pole veel olemas)</li>
-        <li><strong>git init</strong></li>
-        <li>img=src"img.png" alt="git init screen"</li>
-        <li>Lisage failid ja committige esialgsed muudatused</li>
-        <li><strong>git add .</strong></li>
-        <li><strong>git commit -m "Esialgne commit"</strong></li>
+
+        <ul>
+            <li>Loo lokaalne repository (kui see pole veel olemas)</li>
+        </ul>
+        <p class="git-command">git init</p>
 
 
-    </ul>
+        <ul>
+            <li>Lisage failid ja committige esialgsed muudatused</li>
+        </ul>
+        <p class="git-command">git add .</p>
+        <p class="git-command">git commit -m "Esialgne commit"</p>
+
+
+        <p class="git-command">git remote add origin [html or ssh link]</p>
+        <p class="git-command">git push -u origin master</p>
+
+
+
+
 
 </div>
 </body>
