index.html uuendatud liisatud footer, nav, main, section osad, erinevad loetelud ja pealkirjad

--- a/index.html
+++ b/index.html
@@ -6,87 +6,95 @@
     <link rel="stylesheet" href="minuStyle.css">
 </head>
 <body>
-<h1>Mari L Tei Git koduleht</h1>
-<!--pilt-->
-<img src="programming.jpg" alt="minu pilt" >
-<h1>Mari L Tei</h1>
-<h2>Ma õpin Noorem Tarkvaraarendaja eriala</h2>
-<!--õppeained-->
-<h3><strong>Õpitud ained on:</strong></h3>
-<ul>
-    <li>Projekti loomine</li>
-    <li>Kontoritöö tarkvara</li>
-    <li>Arvuti ja -taristu osad</li>
-    <li>Multimeedia</li>
-</ul>
-<!--keeled-->
-<h3><strong>Õpitud/õpitavad keeled on:</strong></h3>
-<ul>
-    <li>Eesti keel</li>
-    <li>Inglise keel</li>
-    <li>Vene keel</li>
+<header>
+    <h1>Mari L Tei Git koduleht</h1>
+</header>
 
-    <li>Java</li>
-    <li>MySQL</li>
-    <li>Python</li>
-</ul>
-<!--arvuti oskused-->
-<h3><strong>Arvuti oskused:</strong></h3>
-<ul>
-     <li>MS Word, Excel, PowerPoint, Project</li>
-     <li>Adobe Illustrator, Photoshop</li>
-     <li>SQL Server Management Studio</li>
-     <li>Visual Studio (Python, ASP.NET)</li>
-     <li>Oracle VirtualBox (Linux, Windows)</li>
-     <li>Web Storm</li>
-     <li>Git CMD</li>
-     <li>Arvutite kokkupanek</li>
-</ul>
-<h2><strong>MVP</strong></h2>
-<p><strong>MVP (Minimum Viable Product) on toote esialgne versioon, mis sisaldab ainult põhifunktsioone, et testida ideed turul ja koguda kasutajate tagasisidet.</strong></p>
-<h3><strong>Kuidas saab MVP printsiipi kasutada oma IT projektides</strong></h3>
-<div id="issue1">
-    <ul>
-        <li><strong>MVP</strong> põhimõtet kasutades saab IT-projektides kiiresti välja arendada toote põhifunktsioonid ja esitada need kasutajatele tagasiside saamiseks.</li>
-        <li>See võimaldab tuvastada ja lahendada potentsiaalseid probleeme varajases etapis, kohandades toodet vastavalt kasutajate vajadustele.</li>
-        <li>Lisaks aitab see minimeerida ajakulu ja ressursse, keskendudes olulisele.</li>
-    </ul>
-</div>
+<main>
+    <section>
+        <!-- Pilt -->
+        <img src="programming.jpg" alt="minu pilt">
+        <h2>Ma õpin Noorem Tarkvaraarendaja eriala</h2>
+    </section>
 
-<div id="issue2">
-<h2><strong>Kuidas teha remote repo ja mis käskud on vaja kasutada</strong></h2>
-    <h3><strong>Loo uus repository GitHubis</strong></h3>
+    <section>
+        <!-- Õppeained -->
+        <h3><strong>Õpitud ained on:</strong></h3>
+        <ul>
+            <li>Projekti loomine</li>
+            <li>Kontoritöö tarkvara</li>
+            <li>Arvuti ja -taristu osad</li>
+            <li>Multimeedia</li>
+        </ul>
+    </section>
 
-    <ul>
-        <li> Minge oma GitHubi kontole.</li>
-        <li> Klõpsake nuppu "New" või "Create new repository".</li>
-        <li> Andke oma repository'le nimi ja lisage soovi korral kirjeldus.</li>
-        <li> Valige, kas repository peaks olema avalik või privaatne.</li>
-        <li> Klõpsake nuppu "Create repository".</li>
-    </ul>
-    <h3><strong>Lokaalse repository loomine ja ühendamine remote repository-ga</strong></h3>
+    <section>
+        <!-- Keeled -->
+        <h3><strong>Õpitud/õpitavad keeled on:</strong></h3>
+        <ul>
+            <li>Eesti keel</li>
+            <li>Inglise keel</li>
+            <li>Vene keel</li>
+            <li>Java</li>
+            <li>MySQL</li>
+            <li>Python</li>
+        </ul>
+    </section>
 
+    <section>
+        <!-- Arvuti oskused -->
+        <h3><strong>Arvuti oskused:</strong></h3>
+        <ul>
+            <li>MS Word, Excel, PowerPoint, Project</li>
+            <li>Adobe Illustrator, Photoshop</li>
+            <li>SQL Server Management Studio</li>
+            <li>Visual Studio (Python, ASP.NET)</li>
+            <li>Oracle VirtualBox (Linux, Windows)</li>
+            <li>Web Storm</li>
+            <li>Git CMD</li>
+            <li>Arvutite kokkupanek</li>
+        </ul>
+    </section>
 
+    <section id="issue1">
+        <h2><strong>MVP</strong></h2>
+        <p><strong>MVP (Minimum Viable Product) on toote esialgne versioon, mis sisaldab ainult põhifunktsioone, et testida ideed turul ja koguda kasutajate tagasisidet.</strong></p>
+        <h3><strong>Kuidas saab MVP printsiipi kasutada oma IT projektides</strong></h3>
+        <ul>
+            <li><strong>MVP</strong> põhimõtet kasutades saab IT-projektides kiiresti välja arendada toote põhifunktsioonid ja esitada need kasutajatele tagasiside saamiseks.</li>
+            <li>See võimaldab tuvastada ja lahendada potentsiaalseid probleeme varajases etapis, kohandades toodet vastavalt kasutajate vajadustele.</li>
+            <li>Lisaks aitab see minimeerida ajakulu ja ressursse, keskendudes olulisele.</li>
+        </ul>
+    </section>
+
+    <section id="issue2">
+        <h2><strong>Kuidas teha remote repo ja mis käskud on vaja kasutada</strong></h2>
+        <h3><strong>Loo uus repository GitHubis</strong></h3>
+        <ul>
+            <li>Minge oma GitHubi kontole.</li>
+            <li>Klõpsake nuppu "New" või "Create new repository".</li>
+            <li>Andke oma repository'le nimi ja lisage soovi korral kirjeldus.</li>
+            <li>Valige, kas repository peaks olema avalik või privaatne.</li>
+            <li>Klõpsake nuppu "Create repository".</li>
+        </ul>
+
+        <h3><strong>Lokaalse repository loomine ja ühendamine remote repository-ga</strong></h3>
         <ul>
             <li>Loo lokaalne repository (kui see pole veel olemas)</li>
         </ul>
         <p class="git-command">git init</p>
-
-
         <ul>
             <li>Lisage failid ja committige esialgsed muudatused</li>
         </ul>
         <p class="git-command">git add .</p>
         <p class="git-command">git commit -m "Esialgne commit"</p>
-
-
         <p class="git-command">git remote add origin [html or ssh link]</p>
         <p class="git-command">git push -u origin master</p>
+    </section>
+</main>
 
-
-
-
-
-</div>
+<footer>
+    <p>&copy; 2025 Mari L Tei</p>
+</footer>
 </body>
 </html>
